started styling, filled project text boxes

--- a/index.html
+++ b/index.html
@@ -1,12 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Admin Dashboard</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <nav>
+        <div id="dashboard"></div>
+        <div class="links"></div>
+        <div class="links"></div>
+        <div class="links"></div>
+        <div class="links"></div>
+        <div class="links"></div>
+        <div class="links"></div>
+        <div class="links"></div>
+        <div class="links"></div>
+        <div class="links"></div>
+        <div class="links"></div>
+      </nav>
+
+      <header>
+        <div class="top">
+          <div class="search"></div>
+          <div class="profile"></div>
+        </div>
+        <div class="bottom">
+          <div class="profile"></div>
+          <div class="buttons"></div>
+        </div>
+      </header>
+
+      <div class="projects">
+        <div class="title"><strong>My Projects</strong></div>
+        <div class="textbox">
+          <strong>This is a head</strong>
+          <div class="text">
+            The sun had set and so had his dreams. If you really strain your
+            ears, you can just about hear the sound of no one giving a damn. Pat
+            ordered a ghost pepper pie. 
+          </div>
+        </div>
+        <div class="textbox">
+          <strong>This is a head</strong>
+          <div class="text">
+            The sun had set and so had his dreams. If you really strain your
+            ears, you can just about hear the sound of no one giving a damn. Pat
+            ordered a ghost pepper pie.
+          </div>
+        </div>
+        <div class="textbox">
+          <strong>This is a head</strong>
+          <div class="text">
+            The sun had set and so had his dreams. If you really strain your
+            ears, you can just about hear the sound of no one giving a damn. Pat
+            ordered a ghost pepper pie.
+          </div>
+        </div>
+        <div class="textbox">
+          <strong>This is a head</strong>
+          <div class="text">
+            The sun had set and so had his dreams. If you really strain your
+            ears, you can just about hear the sound of no one giving a damn. Pat
+            ordered a ghost pepper pie.
+          </div>
+        </div>
+        <div class="textbox">
+          <strong>This is a head</strong>
+          <div class="text">
+            The sun had set and so had his dreams. If you really strain your
+            ears, you can just about hear the sound of no one giving a damn. Pat
+            ordered a ghost pepper pie.
+          </div>
+        </div>
+        <div class="textbox">
+          <strong>This is a head</strong>
+          <div class="text">
+            The sun had set and so had his dreams. If you really strain your
+            ears, you can just about hear the sound of no one giving a damn. Pat
+            ordered a ghost pepper pie.
+          </div>
+        </div>
+      </div>
+
+      <div class="rSide">
+        <div class="title"></div>
+        <div class="frame">
+          <div class="announcstrongents"></div>
+          <div class="announcstrongents"></div>
+          <div class="announcstrongents"></div>
+        </div>
+        <div class="frame">
+          <div class="title"></div>
+          <div class="trending"></div>
+          <div class="trending"></div>
+          <div class="trending"></div>
+          <div class="trending"></div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
