Working on style

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   <body>
     <div class="container">
       <nav>
-        <div id="dashboard"></div>
-        <div class="links"></div>
-        <div class="links"></div>
-        <div class="links"></div>
-        <div class="links"></div>
-        <div class="links"></div>
-        <div class="links"></div>
-        <div class="links"></div>
-        <div class="links"></div>
-        <div class="links"></div>
-        <div class="links"></div>
+        <div id="dashboard">Dashboard</div>
+        <div class="link01">Home</div>
+        <div class="link02">Profile</div>
+        <div class="link03">Messages</div>
+        <div class="link04">History</div>
+        <div class="link05">Tasks</div>
+        <div class="link06">Communities</div>
+        <div class="link07"></div>
+        <div class="link08">Settings</div>
+        <div class="link09">Support</div>
+        <div class="link10">Privacy</div>
       </nav>
 
       <header>
@@ -40,7 +40,27 @@
           <div class="text">
             The sun had set and so had his dreams. If you really strain your
             ears, you can just about hear the sound of no one giving a damn. Pat
-            ordered a ghost pepper pie. 
+            ordered a ghost pepper pie.
+          </div>
+          <div class="icons">
+            <img
+              src="./graphics/heart-alt-svgrepo-com.svg"
+              alt="Like"
+              height="25"
+              width="25"
+            />
+            <img
+              src="./graphics/comment-3-svgrepo-com.svg"
+              alt="Comment"
+              height="20"
+              width="20"
+            />
+            <img
+              src="./graphics/share-svgrepo-com.svg"
+              alt="Share"
+              height="20"
+              width="20"
+            />
           </div>
         </div>
         <div class="textbox">
@@ -50,13 +70,26 @@
             ears, you can just about hear the sound of no one giving a damn. Pat
             ordered a ghost pepper pie.
           </div>
-        </div>
-        <div class="textbox">
-          <strong>This is a head</strong>
-          <div class="text">
-            The sun had set and so had his dreams. If you really strain your
-            ears, you can just about hear the sound of no one giving a damn. Pat
-            ordered a ghost pepper pie.
+
+          <div class="icons">
+            <img
+              src="./graphics/heart-alt-svgrepo-com.svg"
+              alt="Like"
+              height="25"
+              width="25"
+            />
+            <img
+              src="./graphics/comment-3-svgrepo-com.svg"
+              alt="Comment"
+              height="20"
+              width="20"
+            />
+            <img
+              src="./graphics/share-svgrepo-com.svg"
+              alt="Share"
+              height="20"
+              width="20"
+            />
           </div>
         </div>
         <div class="textbox">
@@ -66,13 +99,25 @@
             ears, you can just about hear the sound of no one giving a damn. Pat
             ordered a ghost pepper pie.
           </div>
-        </div>
-        <div class="textbox">
-          <strong>This is a head</strong>
-          <div class="text">
-            The sun had set and so had his dreams. If you really strain your
-            ears, you can just about hear the sound of no one giving a damn. Pat
-            ordered a ghost pepper pie.
+          <div class="icons">
+            <img
+              src="./graphics/heart-alt-svgrepo-com.svg"
+              alt="Like"
+              height="25"
+              width="25"
+            />
+            <img
+              src="./graphics/comment-3-svgrepo-com.svg"
+              alt="Comment"
+              height="20"
+              width="20"
+            />
+            <img
+              src="./graphics/share-svgrepo-com.svg"
+              alt="Share"
+              height="20"
+              width="20"
+            />
           </div>
         </div>
         <div class="textbox">
@@ -81,6 +126,82 @@
             The sun had set and so had his dreams. If you really strain your
             ears, you can just about hear the sound of no one giving a damn. Pat
             ordered a ghost pepper pie.
+          </div>
+          <div class="icons">
+            <img
+              src="./graphics/heart-alt-svgrepo-com.svg"
+              alt="Like"
+              height="25"
+              width="25"
+            />
+            <img
+              src="./graphics/comment-3-svgrepo-com.svg"
+              alt="Comment"
+              height="20"
+              width="20"
+            />
+            <img
+              src="./graphics/share-svgrepo-com.svg"
+              alt="Share"
+              height="20"
+              width="20"
+            />
+          </div>
+        </div>
+        <div class="textbox">
+          <strong>This is a head</strong>
+          <div class="text">
+            The sun had set and so had his dreams. If you really strain your
+            ears, you can just about hear the sound of no one giving a damn. Pat
+            ordered a ghost pepper pie.
+          </div>
+          <div class="icons">
+            <img
+              src="./graphics/heart-alt-svgrepo-com.svg"
+              alt="Like"
+              height="25"
+              width="25"
+            />
+            <img
+              src="./graphics/comment-3-svgrepo-com.svg"
+              alt="Comment"
+              height="20"
+              width="20"
+            />
+            <img
+              src="./graphics/share-svgrepo-com.svg"
+              alt="Share"
+              height="20"
+              width="20"
+            />
+          </div>
+        </div>
+        <div class="textbox">
+          <strong>This is a head</strong>
+          <div class="text">
+            The sun had set and so had his dreams. If you really strain your
+            ears, you can just about hear the sound of no one giving a damn. Pat
+            ordered a ghost pepper pie.
+          </div>
+          <div class="icons">
+            <img
+              src="./graphics/heart-alt-svgrepo-com.svg"
+              alt="Like"
+              height="25"
+              width="25"
+            />
+            <img
+              src="./graphics/comment-3-svgrepo-com.svg"
+              alt="Comment"
+              height="20"
+              width="20"
+            />
+            <img
+              src="./graphics/share-svgrepo-com.svg"
+              alt="Share"
+              height="20"
+              width="20"
+            />
           </div>
         </div>
       </div>
@@ -88,9 +209,9 @@
       <div class="rSide">
         <div class="title"></div>
         <div class="frame">
-          <div class="announcstrongents"></div>
-          <div class="announcstrongents"></div>
-          <div class="announcstrongents"></div>
+          <div class="announcements"></div>
+          <div class="announcements"></div>
+          <div class="announcements"></div>
         </div>
         <div class="frame">
           <div class="title"></div>
