--- a/index.html
+++ b/index.html
@@ -9,17 +9,36 @@
   <body>
     <div class="container">
       <nav>
-        <div id="dashboard">Dashboard</div>
-        <div class="link01">Home</div>
-        <div class="link02">Profile</div>
-        <div class="link03">Messages</div>
-        <div class="link04">History</div>
-        <div class="link05">Tasks</div>
-        <div class="link06">Communities</div>
-        <div class="link07"></div>
-        <div class="link08">Settings</div>
-        <div class="link09">Support</div>
-        <div class="link10">Privacy</div>
+        <div id="dashboard">
+          <img src="./graphics/kangaroo-origami-paper-svgrepo-com.svg" height="25" width="25"/>
+          Dashboard</div>
+        <div class="link">
+          <img src="./graphics/butterfly-origami-paper-svgrepo-com.svg" height="20" width="20"/>
+          Home</div>
+        <div class="link"><img src="./graphics/cat-origami-paper-svgrepo-com.svg" height="20" width="20"/>
+          Profile</div>
+        <div class="link">
+          <img src="./graphics/dove-origami-paper-svgrepo-com.svg" height="20" width="20"/>
+          Messages</div>
+        <div class="link">
+          <img src="./graphics/elephant-origami-paper-svgrepo-com.svg" height="20" width="20"/>
+          History</div>
+        <div class="link">
+          <img src="./graphics/fox-origami-paper-svgrepo-com.svg" height="20" width="20"/>
+          Tasks</div>
+        <div class="link">
+          <img src="./graphics/panda-origami-paper-svgrepo-com.svg" height="20" width="20"/>
+          Communities</div>
+        <div class="link"></div>
+        <div class="link">
+          <img src="./graphics/rooster-origami-paper-svgrepo-com.svg" height="20" width="20"/>
+          Settings</div>
+        <div class="link">
+          <img src="./graphics/rabbit-origami-paper-svgrepo-com.svg" height="20" width="20"/>
+          Support</div>
+        <div class="link">
+          <img src="./graphics/penguin-origami-paper-svgrepo-com.svg" height="20" width="20"/>
+          Privacy</div>
       </nav>
 
       <header>
