time to go back to work

--- a/index.html
+++ b/index.html
@@ -10,46 +10,100 @@
     <div class="container">
       <nav>
         <div id="dashboard">
-          <img src="./graphics/kangaroo-origami-paper-svgrepo-com.svg" height="25" width="25"/>
-          Dashboard</div>
+          <img
+            src="./graphics/kangaroo-origami-paper-svgrepo-com.svg"
+            height="25"
+            width="25"
+          />
+          Dashboard
+        </div>
         <div class="link">
-          <img src="./graphics/butterfly-origami-paper-svgrepo-com.svg" height="20" width="20"/>
-          Home</div>
-        <div class="link"><img src="./graphics/cat-origami-paper-svgrepo-com.svg" height="20" width="20"/>
-          Profile</div>
+          <img
+            src="./graphics/butterfly-origami-paper-svgrepo-com.svg"
+            height="20"
+            width="20"
+          />
+          Home
+        </div>
         <div class="link">
-          <img src="./graphics/dove-origami-paper-svgrepo-com.svg" height="20" width="20"/>
-          Messages</div>
+          <img
+            src="./graphics/cat-origami-paper-svgrepo-com.svg"
+            height="20"
+            width="20"
+          />
+          Profile
+        </div>
         <div class="link">
-          <img src="./graphics/elephant-origami-paper-svgrepo-com.svg" height="20" width="20"/>
-          History</div>
+          <img
+            src="./graphics/dove-origami-paper-svgrepo-com.svg"
+            height="20"
+            width="20"
+          />
+          Messages
+        </div>
         <div class="link">
-          <img src="./graphics/fox-origami-paper-svgrepo-com.svg" height="20" width="20"/>
-          Tasks</div>
+          <img
+            src="./graphics/elephant-origami-paper-svgrepo-com.svg"
+            height="20"
+            width="20"
+          />
+          History
+        </div>
         <div class="link">
-          <img src="./graphics/panda-origami-paper-svgrepo-com.svg" height="20" width="20"/>
-          Communities</div>
+          <img
+            src="./graphics/fox-origami-paper-svgrepo-com.svg"
+            height="20"
+            width="20"
+          />
+          Tasks
+        </div>
+        <div class="link">
+          <img
+            src="./graphics/panda-origami-paper-svgrepo-com.svg"
+            height="20"
+            width="20"
+          />
+          Communities
+        </div>
         <div class="link"></div>
         <div class="link">
-          <img src="./graphics/rooster-origami-paper-svgrepo-com.svg" height="20" width="20"/>
-          Settings</div>
+          <img
+            src="./graphics/rooster-origami-paper-svgrepo-com.svg"
+            height="20"
+            width="20"
+          />
+          Settings
+        </div>
         <div class="link">
-          <img src="./graphics/rabbit-origami-paper-svgrepo-com.svg" height="20" width="20"/>
-          Support</div>
+          <img
+            src="./graphics/rabbit-origami-paper-svgrepo-com.svg"
+            height="20"
+            width="20"
+          />
+          Support
+        </div>
         <div class="link">
-          <img src="./graphics/penguin-origami-paper-svgrepo-com.svg" height="20" width="20"/>
-          Privacy</div>
+          <img
+            src="./graphics/penguin-origami-paper-svgrepo-com.svg"
+            height="20"
+            width="20"
+          />
+          Privacy
+        </div>
       </nav>
 
       <header>
         <div class="top">
           <div class="search"></div>
           <div class="profile"></div>
+          <div class="profile2"></div>
+          <div class="buttons">
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+          </div>
         </div>
-        <div class="bottom">
-          <div class="profile"></div>
-          <div class="buttons"></div>
-        </div>
+
       </header>
 
       <div class="projects">
