right side styling

--- a/index.html
+++ b/index.html
@@ -93,17 +93,14 @@
       </nav>
 
       <header>
-        <div class="top">
-          <div class="search"></div>
-          <div class="profile"></div>
-          <div class="profile2"></div>
-          <div class="buttons">
-            <button>New</button>
-            <button>Upload</button>
-            <button>Share</button>
-          </div>
+        <div class="search"></div>
+        <div class="profile"></div>
+        <div class="profile2"></div>
+        <div class="buttons">
+          <button>New</button>
+          <button>Upload</button>
+          <button>Share</button>
         </div>
-
       </header>
 
       <div class="projects">
@@ -280,18 +277,60 @@
       </div>
 
       <div class="rSide">
-        <div class="title"></div>
+        <div class="title">Announcements</div>
         <div class="frame">
-          <div class="announcements"></div>
-          <div class="announcements"></div>
-          <div class="announcements"></div>
+          <div class="announcements">
+            <strong>Title</strong>
+            <p>
+              This is the actual text of the announcement, but i am too lazy to
+              write something good.
+            </p>
+          </div>
+          <div class="announcements">
+            <strong>Title</strong>
+            <p>
+              This is the actual text of the announcement, but i am too lazy to
+              write something good.
+            </p>
+          </div>
+          <div class="announcements">
+            <strong>Title</strong>
+            <p>
+              This is the actual text of the announcement, but i am too lazy to
+              write something good.
+            </p>
+          </div>
         </div>
+        <div class="title">Trending</div>
         <div class="frame">
-          <div class="title"></div>
-          <div class="trending"></div>
-          <div class="trending"></div>
-          <div class="trending"></div>
-          <div class="trending"></div>
+          <div class="trending">
+            <strong>Title</strong>
+            <p>
+              This is the actual text of the announcement, but i am too lazy to
+              write something good.
+            </p>
+          </div>
+          <div class="trending">
+            <strong>Title</strong>
+            <p>
+              This is the actual text of the announcement, but i am too lazy to
+              write something good.
+            </p>
+          </div>
+          <div class="trending">
+            <strong>Title</strong>
+            <p>
+              This is the actual text of the announcement, but i am too lazy to
+              write something good.
+            </p>
+          </div>
+          <div class="trending">
+            <strong>Title</strong>
+            <p>
+              This is the actual text of the announcement, but i am too lazy to
+              write something good.
+            </p>
+          </div>
         </div>
       </div>
     </div>
