--- a/index.html
+++ b/index.html
@@ -278,55 +278,80 @@
 
       <div class="rSide">
         <div class="title">Announcements</div>
-        <div class="frame">
+        <div id="framed" class="frame">
           <div class="announcements">
-            <strong>Title</strong>
             <p>
+              <strong>Title</strong><br />
               This is the actual text of the announcement, but i am too lazy to
               write something good.
             </p>
           </div>
+          <hr style="width:50%;text-align:center;">
           <div class="announcements">
-            <strong>Title</strong>
             <p>
+              <strong>Title</strong><br />
               This is the actual text of the announcement, but i am too lazy to
               write something good.
             </p>
           </div>
+          <hr style="width:50%;text-align:center;">
           <div class="announcements">
-            <strong>Title</strong>
             <p>
+              <strong>Title</strong><br />
               This is the actual text of the announcement, but i am too lazy to
               write something good.
             </p>
           </div>
         </div>
-        <div class="title">Trending</div>
+        <div class="title">Trending</div> 
         <div class="frame">
           <div class="trending">
-            <strong>Title</strong>
+            <img
+            src="./graphics/fire-2-svgrepo-com.svg"
+            height="50"
+            width="25"
+          />
             <p>
+              <strong>Title</strong><br />
               This is the actual text of the announcement, but i am too lazy to
               write something good.
             </p>
           </div>
+          <hr style="width:50%;text-align:center;">
           <div class="trending">
-            <strong>Title</strong>
+            <img
+            src="./graphics/fire-2-svgrepo-com.svg"
+            height="50"
+            width="25"
+          />
             <p>
+              <strong>Title</strong><br />
               This is the actual text of the announcement, but i am too lazy to
               write something good.
             </p>
           </div>
+          <hr style="width:50%;text-align:center;">
           <div class="trending">
-            <strong>Title</strong>
+            <img
+            src="./graphics/fire-2-svgrepo-com.svg"
+            height="50"
+            width="25"
+          />
             <p>
+              <strong>Title</strong><br />
               This is the actual text of the announcement, but i am too lazy to
               write something good.
             </p>
           </div>
+          <hr style="width:50%;text-align:center;">
           <div class="trending">
-            <strong>Title</strong>
+            <img
+            src="./graphics/fire-2-svgrepo-com.svg"
+            height="50"
+            width="25"
+          />
             <p>
+              <strong>Title</strong><br />
               This is the actual text of the announcement, but i am too lazy to
               write something good.
             </p>
