oops forgot to save html part

--- a/index.html
+++ b/index.html
@@ -93,9 +93,36 @@
       </nav>
 
       <header>
-        <div class="search"></div>
-        <div class="profile"></div>
-        <div class="profile2"></div>
+        <div class="search">
+          <input type="text" placeholder="Search.." />
+          <button>Search</button>
+        </div>
+        <div class="profile">
+          <img
+            src="./graphics/notification-13-svgrepo-com.svg"
+            height="30px"
+            width="30px"
+          />
+          <img
+            src="./graphics/windmill-svgrepo-com.svg"
+            height="30px"
+            width="30px"
+          />
+          <h2>Tamara Vera</h2>
+        </div>
+        <div class="profile2">
+          <img
+            class="icon"
+            src="./graphics/windmill-svgrepo-com.svg"
+            height="50px"
+            width="50px"
+          />
+          <span>
+            <div class="hi">Hi There</div>
+            <div class="name">Tamara Vera @Zelouchan</div>
+          </span>
+        </div>
+
         <div class="buttons">
           <button>New</button>
           <button>Upload</button>
@@ -286,7 +313,7 @@
               write something good.
             </p>
           </div>
-          <hr style="width:50%;text-align:center;">
+          <hr style="width: 50%; text-align: center" />
           <div class="announcements">
             <p>
               <strong>Title</strong><br />
@@ -294,7 +321,7 @@
               write something good.
             </p>
           </div>
-          <hr style="width:50%;text-align:center;">
+          <hr style="width: 50%; text-align: center" />
           <div class="announcements">
             <p>
               <strong>Title</strong><br />
@@ -303,53 +330,53 @@
             </p>
           </div>
         </div>
-        <div class="title">Trending</div> 
+        <div class="title">Trending</div>
         <div class="frame">
           <div class="trending">
             <img
-            src="./graphics/fire-2-svgrepo-com.svg"
-            height="50"
-            width="25"
-          />
+              src="./graphics/fire-2-svgrepo-com.svg"
+              height="50"
+              width="25"
+            />
             <p>
               <strong>Title</strong><br />
               This is the actual text of the announcement, but i am too lazy to
               write something good.
             </p>
           </div>
-          <hr style="width:50%;text-align:center;">
+          <hr style="width: 50%; text-align: center" />
           <div class="trending">
             <img
-            src="./graphics/fire-2-svgrepo-com.svg"
-            height="50"
-            width="25"
-          />
+              src="./graphics/fire-2-svgrepo-com.svg"
+              height="50"
+              width="25"
+            />
             <p>
               <strong>Title</strong><br />
               This is the actual text of the announcement, but i am too lazy to
               write something good.
             </p>
           </div>
-          <hr style="width:50%;text-align:center;">
+          <hr style="width: 50%; text-align: center" />
           <div class="trending">
             <img
-            src="./graphics/fire-2-svgrepo-com.svg"
-            height="50"
-            width="25"
-          />
+              src="./graphics/fire-2-svgrepo-com.svg"
+              height="50"
+              width="25"
+            />
             <p>
               <strong>Title</strong><br />
               This is the actual text of the announcement, but i am too lazy to
               write something good.
             </p>
           </div>
-          <hr style="width:50%;text-align:center;">
+          <hr style="width: 50%; text-align: center" />
           <div class="trending">
             <img
-            src="./graphics/fire-2-svgrepo-com.svg"
-            height="50"
-            width="25"
-          />
+              src="./graphics/fire-2-svgrepo-com.svg"
+              height="50"
+              width="25"
+            />
             <p>
               <strong>Title</strong><br />
               This is the actual text of the announcement, but i am too lazy to
